Bug 302677. Accessible focus events incorrect for autocomplete. r=mconnor, +sr=neil, a=bsmedberg